--- a/askflutter/pubspec.yaml
+++ b/askflutter/pubspec.yaml
@@ -39,7 +39,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/logo/AskFlutter.png
+    - assets/test/user.jpg
+    - assets/logo/AskFlutter-logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
